@@ -3,6 +3,7 @@ package software.bernie.techarium.trait.block;
 import lombok.AllArgsConstructor;
 import lombok.Data;
 import lombok.SneakyThrows;
+import lombok.experimental.UtilityClass;
 import net.minecraft.block.AbstractBlock;
 import net.minecraft.block.Block;
 import net.minecraft.block.BlockRenderType;
@@ -16,11 +17,10 @@ import net.minecraft.util.Direction;
 import net.minecraftforge.common.ToolType;
 import software.bernie.techarium.trait.Trait;
 
-import javax.annotation.Nullable;
-
+@UtilityClass
 public class BlockTraits {
-    public static abstract class MaterialTrait extends Trait {
-        public MaterialTrait() {
+    public abstract static class MaterialTrait extends Trait {
+        protected MaterialTrait() {
             this.addTweaker(AbstractBlock.Properties.class, this::tweakProperties);
         }
         protected abstract void tweakProperties(AbstractBlock.Properties properties);
@@ -39,7 +39,7 @@ public class BlockTraits {
 
         @SneakyThrows
         public T createTileEntity() {
-            return tileClass.newInstance();
+            return tileClass.getDeclaredConstructor().newInstance();
         }
     }
 
@@ -49,7 +49,7 @@ public class BlockTraits {
     }
 
     @Data
-    public static class BlockRenderTypeTrait extends Trait{
+    public static class BlockRenderTypeTrait extends Trait {
         private final BlockRenderType blockRenderType;
     }
     
